hydroflow/tests/compile-fail/surface_demuxenum_wrongtype.stderr
error[E0271]: type mismatch resolving `<impl Pusherator<Item = Shape> as Pusherator>::Item == {integer}`
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:41
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ---------------------^^^^^^^^^^^^^^^^^^^^^
   |                    |                    |
   |                    |                    expected integer, found `Shape`
   |                    required by a bound introduced by this call
   |
note: required by a bound in `pivot_run_sg_1v1`
  --> tests/compile-fail/surface_demuxenum_wrongtype.rs:13:20
   |
13 |         my_demux = source_iter(0..5) -> demux_enum::<Shape>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`
